# Generated by Django 5.2.3 on 2025-06-20 22:31

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('quizzes', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Achievement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('description', models.TextField()),
                ('unlock_criteria', models.CharField(max_length=255)),
                ('icon_url', models.URLField()),
            ],
        ),
        migrations.RenameField(
            model_name='quiz',
            old_name='estimated_duration',
            new_name='avg_time_spent',
        ),
        migrations.RenameField(
            model_name='quiz',
            old_name='is_published',
            new_name='is_public',
        ),
        migrations.AddField(
            model_name='quiz',
            name='avg_score',
            field=models.FloatField(default=0.0),
        ),
        migrations.AddField(
            model_name='quiz',
            name='completion_rate',
            field=models.FloatField(default=0.0),
        ),
        migrations.AddField(
            model_name='quiz',
            name='difficulty_rating',
            field=models.FloatField(default=0.0),
        ),
        migrations.AddField(
            model_name='quiz',
            name='last_content_update',
            field=models.DateTimeField(auto_now=True),
        ),
        migrations.AddField(
            model_name='quiz',
            name='last_stats_update',
            field=models.DateTimeField(auto_now=True),
        ),
        migrations.AddField(
            model_name='quiz',
            name='most_missed_question_id',
            field=models.UUIDField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='quiz',
            name='total_attempts',
            field=models.IntegerField(default=0),
        ),
        migrations.CreateModel(
            name='Feedback',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('rating', models.IntegerField()),
                ('comment', models.TextField(blank=True)),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('quiz', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='feedback', to='quizzes.quiz')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='feedback', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='QuizSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_time', models.DateTimeField(auto_now_add=True)),
                ('end_time', models.DateTimeField(blank=True, null=True)),
                ('score', models.IntegerField(default=0)),
                ('mode', models.CharField(choices=[('PRACTICE', 'Practice'), ('SIMULATION', 'Simulation'), ('FLASHCARDS', 'Flashcards')], default='PRACTICE', max_length=20)),
                ('quiz', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sessions', to='quizzes.quiz')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='quiz_sessions', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='UserAchievement',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('unlocked_at', models.DateTimeField(auto_now_add=True)),
                ('achievement', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='quizzes.achievement')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('user', 'achievement')},
            },
        ),
        migrations.AddField(
            model_name='achievement',
            name='users',
            field=models.ManyToManyField(through='quizzes.UserAchievement', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='QuizProgress',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('correct_answers', models.IntegerField(default=0)),
                ('wrong_answers', models.IntegerField(default=0)),
                ('last_reviewed', models.DateTimeField(auto_now=True)),
                ('strength_score', models.FloatField(default=0.0)),
                ('quiz', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='progress', to='quizzes.quiz')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='quiz_progress', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('user', 'quiz')},
            },
        ),
    ]
