@startuml
skinparam classAttributeIconSize 0

' ----------------------------
'      Entitäten / Klassen
' ----------------------------

class User {
  +id: UUID
  +name: String
  +email: String
  +password: String
  +role: UserRole
  +registrationDate: Date
}

enum UserRole {
  STUDENT
  MODERATOR
  LECTURER
}

class Modul {
  +id: UUID
  +name: String
  +semester: String
  +description: String
}

class Lernset {
  +id: UUID
  +title: String
  +description: String
}

class Quiz {
  +id: UUID
  +Question: String
  +type: QuestionType
  +difficulty: DifficultyLevel
  +explanation: String
  +createdAt: Date
  +rating_score: int
}

enum QuizType {
  MULTIPLE_CHOICE
  FREITEXT
  ZUORDNUNG
}

enum DifficultyLevel {
  EASY
  MEDIUM
  HARD
}

class AnswerOption {
  +id: UUID
  +text: String
  +isCorrect: Boolean
}

class QuizProgress {
  +id: UUID
  +correctAnswers: int
  +wrongAnswers: int
  +lastReviewed: Date
  +strengthScore: float
}

class LearningHistory {
  +id: UUID
  +iq_level: int
  +correctAnswers: int
  +wrongAnswers: int
  +solvedQuizzes: int 
  'zusätzliche Speicherung der solvedQuizzes, 
  'da bei Referenz auf Quiz nach Löschen dieses Probleme entstehen
  +login_streak: int
}

class Badge {
  +id: UUID
  +name: String
  +description: String
}

class QuizSession {
  +id: UUID
  +startTime: DateTime
  +endTime: DateTime
  +score: int
  +mode: QuizMode
}

enum QuizMode {
  PRACTICE
  SIMULATION
  FLASHCARDS
  CHALLENGE
}

class Feedback {
  +id: UUID
  +rating: int
  +comment: String
  +submittedAt: Date
}

class Studiengang {
  +id: UUID
  +name: String
  +description: String
  +createdAt: Date
}


' ----------------------------
'      Beziehungen
' ----------------------------
User "1" *-- "0..*" QuizProgress : erhält individualisierten\n Quizvorschlag durch
User "1" *-- "1" LearningHistory : gespeicherte QuizHistory in
'User "1" *-- "0..*" QuizSession
'User "1" o-- "0..*" Feedback
'User "1" o-- "0..*" Badge
User "1" o-- "0..*" Quiz : erstellt
Studiengang "1"o-- User"0..*" 

'User "1" -- "0..*" StudyGroup : istMitglied
'StudyGroup "1" -- "0..*" QuizSession : gemeinsameQuizze

Modul "1" o-- "1..*" Lernset
Lernset "1" o-- "1..*" Quiz
Quiz "1" *-- "1..*" AnswerOption : besteht aus
'Quiz "1" *-- "0..*" Feedback
Quiz "1" --o "0..*" QuizProgress : Abarbeitungsdaten gespeichert in
'Quiz "0..*" -- "1" LearningHistory : Referenz auf 

@enduml